fixes for vertical clarity and fixes layout to be more readable

--- a/src/components/_HoveredVertexDetailsStyle.css
+++ b/src/components/_HoveredVertexDetailsStyle.css
@@ -8,13 +8,16 @@
 #hovered-vertex-container {
   display: flex;
   justify-self: flex-start;
+  align-items: center;
   grid-column: 1;
   opacity: 75%;
-  margin-left: 1rem;
+  margin-left: 0.75rem;
+  margin-top: 0.5rem;
 }
 
 #cur-hovered {
   display: inline-flex;
+  justify-items: center;
   align-items: center;
   margin-top: 6px;
   font-size: 1.5rem;
@@ -22,21 +25,25 @@
 }
 
 #cur-hov-icon {
-  height: 1.4rem;
+  height: 2rem;
+  padding-right: 0.25rem;
+}
+
+#cut-hov-text-container {
+  display: inline-flex;
+  flex-direction: column;
+  
 }
 
 #cur-hov-label {
+  align-self: start;
+  font-family: 'CharisSIL-Regular', sans-serif;
   text-shadow: 0px 1px 2px black;
   color: rgb(var(--font));
+  text-wrap: nowrap;
 }
 
 #cur-hov-desc {
   text-shadow: 0px 1px 2px black;
   color: rgba(var(--font), 0.5);
-  padding: 0.25rem;
-}
-
-#attr-label {
-  color: rgb(var(--font), 65%);
-  font-family: 'CharisSIL-Regular', sans-serif;
 }
