--- a/src/components/_VerTextDetailsStyle.css
+++ b/src/components/_VerTextDetailsStyle.css
@@ -18,9 +18,8 @@
   grid-row: 2;
   margin-right: 1rem;
   border-radius: 0.5rem;
-  backdrop-filter: blur(0.25rem);
+  backdrop-filter: blur(0.5rem);
   text-shadow: 0px 1px 1px black;
-  padding-left: 0.5rem;
 }
 
 #vertext-icon-cont {
@@ -36,7 +35,12 @@
 
 #vertext-details {
   display: inline-flex;
+  flex-direction: column;
   align-items: baseline;
+  padding: 0.1rem 1rem;
+  border-radius: 0.5rem;
+  border-color: rgba(var(--font), 0.1);
+  border-style: solid;
 }
 
 #vertext-label {
@@ -60,85 +64,4 @@
   padding-right: 0.3rem;
   text-overflow: ellipsis;
   overflow: hidden;
-
 }
-
-/* #vertext-container {
-  position: relative;
-  display: inline-flex;
-  border-radius: 0.5rem;
-  backdrop-filter: blur(0.1rem);
-  background-color: rgba(var(--sketch-bg), 0.5);
-} */
-
-/* #vertext {
-  display: inline-flex;
-  align-items: center;
-  transform: translateY(-5rem);
-  gap: 0.1rem;
-  margin-bottom: 7px;
-}
-
-#label-link {
-  font-size: 1.5rem;
-  font-family: 'CharisSIL-Regular', sans-serif;
-  transition: font-size 235ms, text-decoration 235ms;
-  text-decoration: none;
-}
-
-#label-link:hover {
-  font-size: 1.6rem;
-  text-decoration: underline;
-}
-
-#attr-desc {
-  text-shadow: 0px 1px 2px black;
-  font-size: 1.3rem;
-  color: rgba(var(--font), 0.5);
-  padding-inline-start: 0.25rem;
-} */
-
-/* #no-cur-sel-msg {
-  position: absolute;
-  display: flex;
-  right: 50%;
-  bottom: 33.25%;
-  text-wrap: nowrap;
-  font-size: 1.1rem;
-  color: rgb(var(--danger));
-  opacity: 0;
-}
-
-#icon-container {
-  display: flex;
-  justify-self: flex-end;
-}
-
-#icon-btn {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#icon-container {
-  position: relative;
-  height: 2.5rem;
-  width: 2.5rem;
-}
-
-#icon-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#icon-danger {
-  opacity: 0;
-  z-index: 1;
-} */
